# Thoughts

./: .envrc  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md
docs/stories/: placeholder.md  placeholder2.md
search/: search_index.json
stories/placeholder/: index.html
stories/placeholder2/: index.html
