[tool.poetry]
name = "thoughts"
version = "0.1.0"
description = ""
authors = ["Gengar Playing Hopscotch <05234314+GengarPlayingHopscotch@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.2.14"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
